# kaps.studio.archive.portfolio

./: .gitignore  README.md  backend-tree.txt  structure.txt
backend/: .env.example  BACKEND_AGENTS.md  IMPLEMENTATION_PLAYBOOK.MD  TODO.md  pyproject.toml  repair.py  run_pipeline.py  simulate_portfolio.py
backend/alembic/: env.py
backend/alembic/versions/: 017f58542625_.py  0c064b22e96f_add_relationships.py  1275decebdfa_create_portfolio_tables.py  17e45cdd98c9_add_knowledge_models.py  342e08073927_fix_chat_message_thread_back_populates_.py  3c3d852f3175_add_chat_events_table.py  6883a8b318e5_.py  6dd8622f24aa_add_message_type_and_metadata_to_chat_.py  8185c41af0d4_add_chat_models.py  9f8d0b49f332_add_resume_downloads_table.py  b3814477e224_add_experience_table.py  cdcb39ab290f_add_thread_relationship_to_chatmessage.py  ce2d26864b9d_.py  f8e21922f42e_add_chat_events_table.py  fd2c5603cd8d_initial.py
backend/app/: config.py  exceptions.py  lifespan.py  logging.py  main.py
backend/app/api/: analytics.py  chat.py  contact.py  deps.py  experience.py  health.py  profile.py  projects.py  resume.py  router.py  skills.py  testimonials.py
backend/app/assistant/: __init__.py  agent.py  chat.py  context.py  embeddings.py  prompts.py  service.py
backend/scripts/: generate_response_script.py  simulate_portfolio.py  test_analytics.py  test_stream.py
backend/tests/: conftest.py  test_api.py  test_embedding_service.py  test_health.py  test_ingestion_pipeline.py  test_project_service.py  test_retrieval_pipeline.py  test_rrf.py  test_storage_validator.py  test_upload_service.py
(+144 files in other folders)
